# zp1

./: ARCHITECTURE.md  BENCHMARKS.md  COMPLETION_STATUS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  M4_BENCHMARKS.md  README.md  SECURITY.md
crates/air/: Cargo.toml
crates/air/benches/: constraint_bench.rs
crates/air/src/: constraints.rs  cpu.rs  lib.rs  memory.rs  rv32im.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/delegation/: Cargo.toml
crates/delegation/benches/: crypto_bench.rs
crates/delegation/src/: bigint.rs  blake.rs  blake2b.rs  ecrecover.rs  ed25519.rs  keccak.rs  lib.rs  ripemd160.rs  secp256r1.rs  sha256.rs
crates/ethereum/: Cargo.toml
crates/ethereum/src/: aggregation.rs  config.rs  evm.rs  fetcher.rs  guest_executor.rs  lib.rs  prover.rs  rpc_db.rs  transaction.rs
crates/executor/: Cargo.toml
crates/executor/benches/: syscall_bench.rs
crates/executor/src/: cpu.rs  decode.rs  elf.rs  error.rs  lib.rs  memory.rs  syscall.rs  trace.rs
crates/executor/tests/: test_blake2b.rs  test_ecrecover.rs  test_keccak.rs  test_modexp.rs  test_ripemd160.rs  test_sha256.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: circle.rs  extension.rs  field.rs  lib.rs  limbs.rs  p3_interop.rs
crates/prover/: Cargo.toml
crates/prover/benches/: proof_size.rs  prover_bench.rs
crates/prover/examples/: demo_benchmark.rs
crates/prover/src/: bitwise_tables.rs  channel.rs  commitment.rs  delegation.rs  fri.rs  lde.rs  lib.rs  logup.rs  memory.rs  memory_old.rs  parallel.rs  ram.rs  ram_old.rs  recursion.rs  snark.rs  stark.rs
crates/prover/src/gpu/: backend.rs  cuda.rs  metal.rs  mod.rs  operations.rs
crates/tests/src/: encode.rs  lib.rs  pipeline.rs  programs.rs
crates/trace/: Cargo.toml
crates/trace/src/: columns.rs  lib.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: channel.rs  lib.rs  verify.rs
crates/zksync-os/: Cargo.toml  README.md
crates/zksync-os/examples/: zksync_os_demo.rs
crates/zksync-os/src/: error.rs  lib.rs  oracle.rs  prover.rs  runner.rs  types.rs  witness.rs
crates/zkvm/: Cargo.toml  README.md
crates/zkvm/src/: io.rs  lib.rs  prelude.rs  syscalls.rs
docs/: BITWISE_LOOKUP_DESIGN.md  CONSTRAINT_SYSTEM.md  ETHEREUM_INTEGRATION.md  IMPLEMENTATION_STATUS.md  PROGRESS.md  architecture.md
examples/: Cargo.toml  README.md  build_all.sh  performance_demo.py
examples/age-proof/: Cargo.toml
examples/age-proof/src/: main.rs
examples/blake2b/: Cargo.toml
examples/blake2b/src/: main.rs
examples/chess-checkmate/: Cargo.toml
examples/chess-checkmate/src/: main.rs
examples/commitment/: Cargo.toml
examples/commitment/src/: main.rs
examples/ecrecover/: README.md
examples/ecrecover/src/: main.rs
examples/ed25519-verify/: Cargo.toml
examples/ed25519-verify/src/: main.rs
examples/eth-header/: Cargo.toml
examples/eth-header/src/: main.rs
examples/hash-chain/: Cargo.toml
examples/hash-chain/src/: main.rs
examples/hello-zkvm/: Cargo.toml
examples/hello-zkvm/src/: main.rs
examples/json-parser/: Cargo.toml
examples/json-parser/src/: main.rs
examples/keccak/: README.md
examples/keccak/src/: main.rs
examples/merkle-proof/: Cargo.toml
examples/merkle-proof/src/: main.rs
examples/nullifier/: Cargo.toml
examples/nullifier/src/: main.rs
examples/password-hash/: Cargo.toml
examples/password-hash/src/: main.rs
examples/range-proof/: Cargo.toml
examples/range-proof/src/: main.rs
examples/regex-match/: Cargo.toml
examples/regex-match/src/: main.rs
examples/ripemd160/: Cargo.toml
examples/ripemd160/src/: main.rs
examples/rsa-verify/: Cargo.toml
examples/rsa-verify/src/: main.rs
examples/sha256/: README.md
examples/sha256/src/: main.rs
examples/sudoku/: Cargo.toml
examples/sudoku/src/: main.rs
examples/voting/: Cargo.toml
examples/voting/src/: main.rs
examples/waldo-proof/: Cargo.toml
examples/waldo-proof/src/: main.rs
examples/wordle/: Cargo.toml
examples/wordle/src/: main.rs
