[workspace]
resolver = "2"
members = [
    "crates/primitives",
    "crates/executor",
    "crates/trace",
    "crates/air",
    "crates/prover",
    "crates/verifier",
    "crates/delegation",
    "crates/ethereum",
    "crates/tests",
    "crates/cli", 
    "crates/zkvm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

repository = "https://github.com/this-vishalsingh/zp1"

[workspace.dependencies]
# Internal crates
zp1-primitives = { path = "crates/primitives" }
zp1-executor = { path = "crates/executor" }
zp1-trace = { path = "crates/trace" }
zp1-air = { path = "crates/air" }
zp1-prover = { path = "crates/prover" }
zp1-verifier = { path = "crates/verifier" }
zp1-delegation = { path = "crates/delegation" }
zp1-ethereum = { path = "crates/ethereum" }

# External dependencies
rand = "0.8"
sha2 = "0.10"
blake3 = "1.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }

# Plonky3 - SIMD-optimized primitives (MIT/Apache 2.0)
p3-field = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-mersenne-31 = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-circle = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
p3-util = { git = "https://github.com/Plonky3/Plonky3", branch = "main" }
