[workspace]
resolver = "2"
members = [
    "fibonacci",
    "keccak",
    "sha256",
    "ecrecover",
    "memory-test",
    "blake2b",
    "json-parser",
    "merkle-proof",
    "password-hash",
    "ed25519-verify",
    "rsa-verify",
    "eth-header",
    "ripemd160",
    "wordle",
    "chess-checkmate",
    "range-proof",
    "waldo-proof",
    "sudoku",
    "age-proof",
    "voting",
    "regex-match",
    "hash-chain",
    "hello-zkvm",
    "nullifier",
    "commitment",
]

# guest-hello excluded due to serde_core no_std compatibility issues
# Use it as a reference template only
exclude = ["guest-hello"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
panic = "abort"
