[package]
name = "zp1-delegation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zp1-primitives = { workspace = true }
serde = { workspace = true }
tiny-keccak = { version = "2.0", features = ["keccak"] }
secp256k1 = { version = "0.29", features = ["recovery", "global-context"] }
sha2 = "0.10"
ripemd = "0.1"
blake2 = "0.10"

[dev-dependencies]
rand = { workspace = true }
hex = "0.4"
