[package]
name = "zp1-ethereum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
zp1-primitives = { workspace = true }
zp1-executor = { workspace = true }
zp1-trace = { workspace = true }
zp1-prover = { workspace = true }

# Ethereum dependencies
ethers = { version = "2.0", features = ["ws", "ipc"] }
revm = { version = "3.5", default-features = false, features = ["std", "serde"] }
alloy-primitives = "0.7"
alloy-rlp = "0.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# System info
num_cpus = "1.16"
blake3 = "1.5"

[dev-dependencies]
tokio-test = "0.4"
