[package]
name = "zp1-prover"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
metal = []  # Enable Metal GPU backend (macOS)
cuda = []   # Enable CUDA GPU backend (NVIDIA)
gpu = ["metal", "cuda"]  # Enable all GPU backends

[dependencies]
zp1-primitives = { workspace = true }
zp1-trace = { workspace = true }
zp1-air = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
criterion = "0.5"

[[bench]]
name = "prover_bench"
harness = false
