[package]
name = "zp1-prover"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
gpu-metal = ["metal"]  # Enable Metal GPU backend (macOS)
cuda = []              # Enable CUDA GPU backend (NVIDIA)
gpu = ["gpu-metal", "cuda"]  # Enable all GPU backends

[dependencies]
zp1-primitives = { workspace = true }
zp1-trace = { workspace = true }
zp1-air = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }

# Optional Metal GPU support (macOS only)
metal = { version = "0.28", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[dev-dependencies]
rand = { workspace = true }
criterion = "0.5"

[[bench]]
name = "prover_bench"
harness = false
