[package]
name = "zp1-zkvm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Guest library for writing zkVM programs"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = { version = "1.3", default-features = false }

# Optional dependencies for testing outside zkVM
tiny-keccak = { version = "2.0", features = ["keccak"], optional = true }
sha2 = { version = "0.10", optional = true }
blake2 = { version = "0.10", optional = true }
ripemd160 = { version = "0.10", optional = true }
num-bigint = { version = "0.4", optional = true }

[features]
default = []
std = ["serde/std"]
testing = ["tiny-keccak", "sha2", "blake2", "ripemd160", "num-bigint"]
